--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.5",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "merge-graphql-schemas": "^1.5.3",
     "nodemon": "^1.18.3",
     "pg": "^7.4.3",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "subscriptions-transport-ws": "^0.9.13"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
