--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "graphql-redis-subscriptions": "^1.5.0",
     "graphql-subscriptions": "^0.5.8",
     "graphql-tools": "^3.0.5",
     "jsonwebtoken": "^8.3.0",
